--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.476.0",
     "motion": "^12.6.2",
     "next": "15.1.3",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^4.0.1",
+    "rtl-detect": "^1.1.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tech-stack-icons": "^2.1.0",
