--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npm rebuild sharp"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
