--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.2",
+    "@types/rtl-detect": "^1.0.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
