--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,6 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"],
-
     "plugins": [
       {
         "name": "next"
@@ -24,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/checkout_session/route.tsx", "src/lib/stripe.ts"],
   "exclude": ["node_modules"]
 }
