--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starter-template",
-  "version": "0.1.0",
+  "name": "codewithali-official",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
