--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "0.0.35",
+    "@tanstack/react-form": "^1.14.1",
     "@tanstack/react-query": "^5.71.10",
+    "@tanstack/zod-form-adapter": "^0.42.1",
     "animejs": "^4.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,7 +57,7 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
+    "zod": "^3.25.76",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
